#51: set up maven profiles for testing